<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="onesong">1 song</string>
    <plurals name="Nsongs">
        <item quantity="one"><xliff:g id="count">%d</xliff:g> song</item>
        <item quantity="other">Total of <xliff:g id="count">%d</xliff:g> songs</item>
    </plurals>
    <plurals name="Nalbums">
        
        <item quantity="one">1 album</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> albums</item>
    </plurals>
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%5$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%3$02d:%5$02d</xliff:g></string>
    <string name="whoes_album">"'s album"</string>
    <string name="party_shuffle">Party shuffle</string>
    <string name="party_shuffle_off">Party shuffle off</string>
    <string name="delete_item">Delete</string>
    <string name="shuffle_all">Shuffle all</string>
    <string name="delete_confirm_button_text">OK</string>
    <plurals name="NNNtracksdeleted">
        
        <item quantity="one">1 song was deleted.</item>
        
        <item quantity="other"><xliff:g id="songs_to_delete">%d</xliff:g> songs were deleted.</item>
    </plurals>
    <plurals name="NNNtracksremoved">
        <item quantity="one"><xliff:g id="songs_to_delete">%1$d</xliff:g> song was removed from \"<xliff:g id="playlist">%2$s</xliff:g>\" playlist.</item>
        <item quantity="other"><xliff:g id="songs_to_delete">%1$d</xliff:g> songs were removed from \"<xliff:g id="playlist">%2$s</xliff:g>\" playlist.</item>
    </plurals>
    <string name="scanning">Scanning SD card\u2026</string>
    <string name="scanning_nosdcard">Scanning USB storage\u2026</string>
    <string name="nowplaying_title">Now playing</string>
    <string name="artists_title">Artists</string>
    <string name="albums_menu">Albums</string>
    <string name="albums_title">Albums</string>
    <string name="tracks_menu">Songs</string>
    <string name="tracks_title">Songs</string>
    <string name="playlists_menu">Playlists</string>
    <string name="playlists_title">Playlists</string>
    <string name="all_title">All media</string>
    <string name="browse_menu">Artists</string>
    <string name="search_title">Search</string>
    <string name="no_tracks_title">No songs</string>
    <string name="no_album_title">No albums</string>
    <string name="no_artist_title">No artists</string>
    <string name="no_folderlist_title">No folders</string>
    <string name="delete_playlist_menu">Delete</string>
    <string name="rename_playlist_menu">Rename</string>
    <string name="playlist_deleted_message">Playlist deleted.</string>
    <string name="playlist_renamed_message">Playlist renamed.</string>
    <string name="recentlyadded">Recently added</string>
    <string name="podcasts_listitem">Podcasts</string>
    <string name="sdcard_missing_title">No SD card</string>
    <string name="sdcard_missing_title_nosdcard">No USB storage</string>
    <string name="sdcard_missing_message">Your phone doesn\'t have an SD card inserted.</string>
    <string name="sdcard_missing_message_nosdcard">Your phone doesn\'t have USB storage.</string>
    <string name="sdcard_busy_title">SD card unavailable</string>
    <string name="sdcard_busy_title_nosdcard">USB storage unavailable</string>
    <string name="sdcard_busy_message">Your SD card is busy.</string>
    <string name="sdcard_busy_message_nosdcard">Your USB storage is busy.</string>
    <string name="sdcard_error_title">SD card error</string>
    <string name="sdcard_error_title_nosdcard">USB storage error</string>
    <string name="sdcard_error_message">An error was encountered on your SD card.</string>
    <string name="sdcard_error_message_nosdcard">An error was encountered on your USB storage.</string>
    <string name="unknown_artist_name">Unknown artist</string>
    <string name="unknown_album_name">Unknown album</string>
    <string name="shuffle_on_notif">Shuffle is on.</string>
    <string name="repeat_current_notif">Repeating current song.</string>
    <string name="sequence_notif">"Sequence play is on."</string>
    <string name="repeat_all_notif">Repeating all songs.</string>
    <string name="ringtone_menu">Use as Call ringtone</string>
    <string name="ringtone_menu_short">Use as ringtone</string>
    <string name="ringtone_set">\"<xliff:g example="Alarm Bell" id="name">%s</xliff:g>\" set as Call ringtone.</string>
    <string name="play_selection">Play</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="show_artist">Show the artist info</string>
    <string name="queue">Current playlist</string>
    <string name="new_playlist">New</string>
    <plurals name="NNNtrackstoplaylist">
        
        <item quantity="one">1 song added to \"<xliff:g id="playlist">%2$s</xliff:g>\" playlist.</item>
        
        <item quantity="other"><xliff:g example="27" id="number">%1$d</xliff:g> songs added to \"<xliff:g id="playlist">%2$s</xliff:g>\" playlist.</item>
    </plurals>
    <string name="emptyplaylist">Selected playlist is empty.</string>
    <string name="create_playlist_create_text">Save</string>
    <string name="service_start_error_title">Playback problem</string>
    <string name="service_start_error_msg">The song couldn\'t be played.</string>
    <string name="service_start_error_button">OK</string>
    <string name="musicbrowserlabel">Music</string>
    <string name="mediaplaybacklabel">Music</string>
    <string name="mediapickerlabel">Music</string>
    <string name="playback_failed">Sorry,fail to play the file.</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="streamloadingtext">Connecting to <xliff:g id="host">%s</xliff:g>\u2026</string>
    <string name="loading">Loading\u2026</string>
    <string name="sort_by_track">Tracks</string>
    <string name="sort_by_album">Albums</string>
    <string name="sort_by_artist">Artists</string>
    <string name="music_picker_title">Choose music track</string>
    <string name="search_result">"Search Result"</string>
    <string name="widget_initial_text">Touch to choose music.</string>
    <string name="effectspanel">Sound Effects</string>
    <string name="no_play">"Currently unable to play!"</string>
    <string name="music_selected_all">Select all</string>
    <string name="music_cancle_selected_all">"Cancel all"</string>
    <string name="nolrc">No lyric or file is invalid</string>
    <string name="ringtone_title_sim1">SIM1 Call ringtone</string>
    <string name="ringtone_title_sim2">SIM2 Call ringtone</string>
    <string name="ringtone_set_sim1">\"<xliff:g example="Alarm Bell" id="name">%s</xliff:g>\" set as SIM1 Call ringtone.</string>
    <string name="ringtone_set_sim2">\"<xliff:g example="Alarm Bell" id="name">%s</xliff:g>\" set as SIM2 Call ringtone.</string>
    <string name="ring_set_fail">"Sorry, the song could not be played. Please select another song as ringtone"</string>
    <string name="ring_set_silent_vibrate">"Custom ringtones is not supported in the current mode"</string>
    <string name="please_insert_sim_card">"Please insert a SIM card at least."</string>
    <string name="create_playlist_warning">Can\'t use the same name with system playlist.</string>
    <string name="playlist_created_message">Playlist created.</string>
    <string name="delete_album">Permanently delete the entire album \"<xliff:g id="album">%s</xliff:g>\" from device?</string>
    <string name="delete_artist_album">Permanently delete all songs in the album \"<xliff:g id="album">%s</xliff:g>\" which by \"<xliff:g id="artist">%s</xliff:g>\"  from device?</string>
    <string name="delete_song">Permanently delete \"<xliff:g id="song">%s</xliff:g>\" from device?</string>
    <plurals name="NNNallDeleteSelectedSong">
        <item quantity="one">Permanently deleted the selected song from device?</item>
        <item quantity="other">Permanently deleted the selected songs from device?</item>
    </plurals>
    <string name="delete_folder_prompt">Permanently delete add songs in \"<xliff:g id="folder">%s</xliff:g>\" folder from device?</string>
    <string name="delete_playlist">Delete \"<xliff:g id="song">%s</xliff:g>\" from playlist?</string>
    <string name="display_music">Music</string>
    <string name="quit">"Quit"</string>
    <string name="setting">"Setting"</string>
    <string name="folder_menu">"Folders"</string>
    <string name="delete_playlist_message">Are you sure you want to delete playlist \"%1$s\"?</string>
    <string name="delete_all_playlist">"Clear all playlists"</string>
    <plurals name="NNNallSongsExist">
        <item quantity="one">The song has existed in playlist.</item>
        <item quantity="other">The songs have existed in playlist.</item>
    </plurals>
    <plurals name="NNNaddsongtoplaylist">
        <item quantity="one">1 song added,</item>
        <item quantity="other"><xliff:g example="27" id="number">%d</xliff:g> songs added,</item>
    </plurals>
    <string name="NNNsongAlreadyExist2">
        <xliff:g example="27" id="number">%1$d</xliff:g> songs already exist in the \"<xliff:g id="playlist">%2$s</xliff:g>\" playlist.
    </string>
    <string name="favorite_added">My favorite song</string>
    <string name="add_playlist_title">Add playlist</string>
    <string name="empty_play_list">Empty playlist</string>
    <string name="sort_by_time">Sort by time</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="share">Share</string>
    <string name="share_error">"Application of no share!"</string>
    <string name="no_search_result">"No songs were found"</string>
    <string name="search_title_hint">Artists, Songs or Albums</string>
    <string name="error_permissions">The app does not have critical permissions needed to run. Please check your permissions settings.</string>
    <string name="dialog_dismiss">Dismiss</string>
    <string name="toast_fileexplorer_internal_error">Permission denied in Music!</string>
    <string name="fifty_min"> 15 minutes</string>
    <string name="theirty_min"> 30 minutes</string>
    <string name="sixty_min"> 60 minutes</string>
    <string name="ninety_min"> 90 minutes</string>
    <string name="self_define">"Custom stop time"</string>
    <string name="timer_option">"Set successfully, the music will close after the countdown."</string>
    <plurals name="NNNselftimeSuffix">
        <item quantity="one">minute</item>
        <item quantity="other">minutes</item>
    </plurals>
    <string name="self_min">"minutes"</string>
    <string name="timer_setting">"Set Stop Timer"</string>
    <string name="change_face">Change Theme</string>
    <string name="timed_setting">"Select Stop Time"</string>
    <string name="time_warning">Custom timer exceeds the upper limit of 1440 minutes (24 hours)!</string>
    <string name="time_min_warning">Custom timer should not be less than one minute!</string>
    <string name="time_not_null">Custom timer should not be null!</string>
    <string name="no_allow_play_calling">"Not allowed to play music during a call (radio/video)."</string>
    <string name="random_play_all">"Shuffle All"</string>
    <string name="unable_to_connect_title">"Unable to connect to file"</string>
    <string name="unable_to_connect_message">"Could not get the current file. Please check the connection"</string>
    <string name="protect_information">"Protect Information"</string>
    <string name="drm_consume_title">"Consume DRM Rights"</string>
    <string name="drm_consume_hint">"Your operation will consume DRM rights"</string>
    <string name="drm_file_name">File Name: %1$s</string>
    <string name="drm_rights_validity">Rights Validity: valid</string>
    <string name="drm_rights_invalidity">Rights Validity: invalid</string>
</resources>