<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_search"
        android:iconifiedByDefault="false"
        android:orderInCategory="80"
        android:queryHint="@string/search_title"
        android:title="@string/search_title"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_setting"
        android:iconifiedByDefault="false"
        android:orderInCategory="90"
        android:queryHint="@string/setting"
        android:title="@string/setting"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/quit"
        android:title="@string/quit"
        android:orderInCategory="100"
        app:showAsAction="never"/>

</menu>