<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/timed_setting"
            android:textColor="#000000"
            android:textSize="18sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <RadioGroup
                    android:id="@+id/radio_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <RadioButton
                        android:id="@+id/radio_view_15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="22dp"
                        android:text="@string/fifty_min"
                        android:textColor="#000000"
                        android:textSize="16sp" >
                    </RadioButton>

                    <RadioButton
                        android:id="@+id/radio_view_30"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/theirty_min"
                        android:textColor="#000000"
                        android:textSize="16sp" >
                    </RadioButton>

                    <RadioButton
                        android:id="@+id/radio_view_60"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/sixty_min"
                        android:textColor="#000000"
                        android:textSize="16sp" >
                    </RadioButton>

                    <RadioButton
                        android:id="@+id/radio_view_90"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/ninety_min"
                        android:textColor="#000000"
                        android:textSize="16sp" >
                    </RadioButton>



                    </RadioGroup>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/timer_edit_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_view_self"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:textColor="#000000"
                        android:textSize="16sp" >
                    </RadioButton>

                    <EditText
                        android:id="@+id/edit_time"
                        android:layout_width="80sp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="1dp"
                        android:inputType="number"
                        android:paddingEnd="20dp"
                        android:visibility="gone">
                        <requestFocus />
                    </EditText>

                    <TextView
                        android:id="@+id/self_time_suffix"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/self_min"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:visibility="gone"/>
                </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="6dip" >

        <Button
            android:id="@+id/timer_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="8dip"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/done"
            android:textColor="@color/button_ok_selector" />

        <Button
            android:id="@+id/timer_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/timer_done"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/cancel"
            android:textColor="@color/ok_text_color" />
    </RelativeLayout>

</LinearLayout>
